@@ -1,3 +1,10 @@
+2000-08-24  Frank Ch. Eigler  <fche@redhat.com>
+
+	* hardware.scm (<hw-immediate> get-index-mode): Define method.
+	* operand.scm (<operand> gen-pretty-name): Tolerate no op:sem-name.
+	* rtl-c.scm (-c-rtl-get): Improve an error message.
+	* sim.scm (-op-gen-set-trace): Support <derived-operand> lvalues.	
+
 2000-08-22  Frank Ch. Eigler  <fche@redhat.com>
 
 	* Makefile.in (DIST_COMMON): Regenerated.
